# pyETA-toolbox

./: .gitignore  Pipfile  README.md  pyproject.toml  test,py  test.py  test1.py  test2.py
EyeTrackerAnalyzer/: __init__.py  application.py  cli.py
EyeTrackerAnalyzer/component/: window.py
EyeTrackerAnalyzer/components/: gaze.py  mock.py  tobii.py  track.py  utils.py  validate.py  window.py
EyeTrackerAnalyzer/tests/: test_mne_lsl.py  test_oneeurofilter.py  test_pylsl.py
paper/: paper.bib  paper.md
pyETA/: EEGSimulation.py  __init__.py  __main__.py  application.py  application_runner.py  cli.py  test.py
pyETA/components/: mock.py  reader.py  track.py  utils.py  validate.py  window.py
pyETA/resources/: icon.icns
tests/: test_mne_lsl.py  test_oneeurofilter.py  test_pylsl.py
