[tool.poetry]
name = "pyETA"
version = "0.0.6"
description = "This toolbox provides a realtime visualization of eye tracking data to be used for designing passive BCI system."
authors = ["Binay Kumar Pradhan <pradhan.binay@b-tu.de>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/VinayIN/EyeTrackerAnalyzer"
keywords = ["eyetracker", "tobii", "mock tobii", "passiveBCI"]
packages = [
    { include = "pyETA" }
]

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
dash = "^2.18.1"
numpy = "^2.2.2"
pandas = "^2.2.3"
pylsl = "^1.17.6"
mne-lsl = "^1.8.0"
pyqt6 = "^6.8.0"
pynput = "^1.7.7"
dash-bootstrap-components = "^1.6.0"
click = "^8.1.8"
tobii-research = "^2.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
ipython = "^8.31.0"
pytest-asyncio = "^0.24.0"

[tool.pytest.ini_options]
testpaths = ["EyeTrackerAnalyzer/tests"]
log_cli = true
log_cli_level = "INFO"
log_file_format = "%(asctime)s :: %(name)s:%(filename)s:%(lineno)d :: %(levelname)s :: %(message)s"
log_file = "eta_data/test.log"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pyETA = "pyETA.cli:main"